working on initial migration to new inspection state api