@@ -66,7 +66,7 @@ public class UnusedMessageFormatParameterInspection extends BaseLocalInspectionT
   }
 
   @Nullable
-  public ProblemDescriptor[] checkFile(@Nonnull PsiFile file, @Nonnull InspectionManager manager, boolean isOnTheFly) {
+  public ProblemDescriptor[] checkFile(@Nonnull PsiFile file, @Nonnull InspectionManager manager, boolean isOnTheFly, Object state) {
     if (!(file instanceof PropertiesFile)) return null;
     PropertiesFile propertiesFile = (PropertiesFile) file;
     final List<IProperty> properties = propertiesFile.getProperties();
@@ -92,7 +92,7 @@ public class UnusedMessageFormatParameterInspection extends BaseLocalInspectionT
             index = Math.min(comma, brace);
           }
           try {
-            parameters.add(new Integer(value.substring(0, index)));
+            parameters.add(Integer.valueOf(value.substring(0, index)));
           } catch (NumberFormatException e) {
             break;
           }
